--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 MONGO_URI = mongodb+srv://Saipronoti:sai123pronoti@cluster1.xfxx6oj.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=saipronoti
+NODE_ENV=production
